# pw_hw_m13_git

contacts_api_3/: db.py  docker-compose.yml  example.env  main.py  models.py  pyproject.toml  schemas.py
contacts_api_3/conf/: config.py  config_v2.py
contacts_api_3/migrations/: env.py
contacts_api_3/migrations/versions/: b5604cd8cf60_init.py
contacts_api_3/postgres-data/base/13481/: pg_internal.init
contacts_api_3/postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16399  16401  16403  16411  16412  16419  16420  16421  16422  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+5 more)
contacts_api_3/postgres-data/global/: 1260  pg_control  pg_internal.init
contacts_api_3/postgres-data/pg_stat/: db_0.stat  db_16384.stat  global.stat
contacts_api_3/postgres-data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
contacts_api_3/repository/: contacts.py  users.py
contacts_api_3/routes/: auth.py  contacts.py  users.py
contacts_api_3/services/: auth.py  email.py
quotes_app/: get_data.py  pyproject.toml
quotes_app/quotes/: authors.json  quotes.json
quotes_app/quotes/quoteapp/: delete_dublicate.py  forms.py  models.py  urls.py  views.py
quotes_app/quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_author_born_date.py  0003_quote_user_tag_user_tag_tag_of_username.py  0004_author_user.py  0005_alter_author_born_date.py
quotes_app/quotes/quotes/: routers.py  settings.py  test.py  urls.py
quotes_app/quotes/users/: forms.py  views.py
(+11 files in other folders)
